# PWP3D

./: .gitignore  CMakeLists.txt
Application/: CMakeLists.txt  PWP3DAPP  PerseusLibTest.cpp  heaviside.txt
Application/shader/: model.vert
Application/src/: fitter.cpp  fitter.hpp  globals.hpp  main.cpp
PerseusLib/: CMakeLists.txt  PWP3DConfig.cmake  PWP3DTargets.cmake  config.h
PerseusLib/Optimiser/Engine/: OptimisationEngine.cpp
